# storage/api-docs/api-docs.json
@@ -145,6 +145,39 @@
                 }
             }
         },
+        "/api/get-contact-info": {
+            "post": {
+                "operationId": "f2a5088ad458b06a01290ff68e569649",
+                "requestBody": {
+                    "description": "request parameters to list accounts",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/AccountRequest"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
+            }
+        },
         "/api/field-deposit": {
             "post": {
                 "operationId": "578383de6b0af64d79fb0f73c5d04ec1",
